Add alien records
